[tool.black]
line-length = 119
target-version = ["py310"]

[tool.isort]
py_version = 310
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true


[tool.poetry]
name = "lang-playgroud"
version = "0.1.0"
description = ""
authors = ["김영재 <coreakyj96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "^23.12.0"
flake8 = "^6.1.0"
isort = "^5.13.2"
commitizen = "^3.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
